--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:20.0.0'
 
 
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:30.2.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-crashlytics'
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
